# SyncPlay-V2

./: coluna-direta.md  lista_blocos_2026-04-29.md  package-lock.json  package.json  summary_playlist.txt
src/: App.css  App.tsx  time.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  error.rs  lib.rs  main.rs  schedule.rs  state.rs
src-tauri/src/commands/: api_config.rs  audio.rs  library_media_resolve.rs  library_sync.rs  mix.rs  mixer.rs  mod.rs  music_cover.rs  playlist_watch.rs  schedule.rs  settings.rs  superaudio_prompts.rs  weather.rs
src-tauri/src/core/: audio.rs  decoder.rs  dsp.rs  files.rs  library_sync.rs  mix_detection.rs  mixer.rs  mod.rs  paths.rs  playlist.rs  schedule.rs  settings.rs  weather.rs
src-tauri/src/models/: audio.rs  fs.rs  mixer.rs  mod.rs  schedule.rs  window.rs
src/api/: apiConfig.ts  superaudioAi.ts
src/assets/: ArtistIcon.tsx  CollectionIcon.tsx  FiltersIcon.tsx  ReloadMusicIcon.tsx  VarinhaMagica.tsx
src/components/: BlockHeader.tsx  MarqueeText.tsx  PlaylistMusicItem.tsx  TitleBar.tsx
src/hooks/: useAutoMixDetection.ts  useColumnResize.ts  useMixer.ts  useMixer.tsx  usePlaylistData.ts  usePlaylistItemDrag.ts  useSyncplayLibrary.ts
src/lib/: buildMusicFromDrag.ts  mediaTypeItemStyles.ts  musicCoverApi.ts  operationMode.ts  playlistItemCover.ts
src/playlist/: playlistBlockHelpers.ts
src/settings/: defaults.ts  menuCatalog.ts  settingsContent.ts  settingsStorage.ts  types.ts  useAppSettings.ts
src/types/: dnd.ts
(+34 files in other folders)
