[package]
name = "syncplay-v2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "syncplay_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
tokio = { version = "1.52.1", features = ["full"] }
chrono = "0.4"
thiserror = "2"
symphonia = { version = "0.5.5", features = ["all"] }
ringbuf = "0.5.0"
rubato = "0.16"
crossbeam-channel = "0.5"
notify = "7"
